# us_lab4a

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL.md  README.md  README.txt  TODO.txt  get_hdf5.sh  licenses.txt  sitau.txt  us_lab4a.pro
data/: example_ascan.txt
doc/: notes.txt  processors.txt
network_sync/linuxcnc/: M101  M102  scan-async_acq.ngc  scan-sync_acq.ngc
project/: batch-example.txt  clean.sh  info.txt
project/device_sectorial_scan/: task-continuous-network.txt  task-single_image-saved.txt
project/device_sectorial_scan-imasonic_0.5mhz_64elem/: config-device_sectorial_scan_method.txt  config-network_acquisition.txt  task-single_image-network.txt  task-trigger-network.txt
project/pa-imasonic-0.5_mhz-64_elem/: task-continuous-network.txt  task-single_image-network.txt  task-single_image-saved.txt  task-trigger-network.txt
project/show_image/: task-show_image.txt
project/sim_circular_source/: task-acoustic_field-transient-analytic.txt  task-acoustic_field-transient-numeric-sp.txt  task-acoustic_field-transient-numeric.txt  task-acoustic_field-transient-numeric_cuda-sp.txt  task-acoustic_field-transient-numeric_ocl-dp.txt  task-acoustic_field-transient-numeric_ocl-sp.txt  task-impulse_response-analytic.txt  task-impulse_response-numeric-sp.txt  task-impulse_response-numeric.txt  task-impulse_response-numeric_cuda-sp.txt  task-impulse_response-numeric_ocl-dp.txt  task-impulse_response-numeric_ocl-sp.txt  task-propagation-transient-analytic.txt  task-propagation-transient-numeric-sp.txt  task-propagation-transient-numeric.txt  task-propagation-transient-numeric_cuda-sp.txt  task-propagation-transient-numeric_ocl-dp.txt  task-propagation-transient-numeric_ocl-sp.txt  task-radiation_pattern-transient-analytic.txt  task-radiation_pattern-transient-numeric-sp.txt  task-radiation_pattern-transient-numeric.txt  task-radiation_pattern-transient-numeric_cuda-sp.txt  task-radiation_pattern-transient-numeric_ocl-dp.txt  task-radiation_pattern-transient-numeric_ocl-sp.txt
project/sim_rectangular_flat_source/: config-array-2.txt  config-array-radiation_pattern.txt  config-array.txt  config-grid.txt  config-single.txt  config.txt  convert_propagation_images.py  task-acoustic_beam-array-transient-analytic.txt  task-acoustic_beam-array-transient-numeric.txt  task-acoustic_beam-array-transient.txt  task-acoustic_beam-single-transient-analytic.txt  task-acoustic_beam-single-transient-numeric.txt  task-acoustic_beam-transient.txt  task-acoustic_field-array-transient-analytic.txt  task-acoustic_field-array-transient-numeric.txt  task-acoustic_field-array-transient.txt  task-acoustic_field-single-transient-analytic.txt  task-acoustic_field-single-transient-numeric.txt  task-acoustic_field-single-transient.txt  task-acoustic_field-transient.txt  task-impulse_response-array-analytic.txt  task-impulse_response-array-numeric.txt  task-impulse_response-array.txt  task-impulse_response-single-analytic.txt  task-impulse_response-single-numeric.txt  task-impulse_response-single.txt  task-impulse_response.txt  (+16 more)
project/sim_rectangular_flat_source-array/: task-acoustic_field-transient-analytic.txt  task-acoustic_field-transient-numeric.txt  task-impulse_response-analytic.txt  task-impulse_response-numeric.txt  task-propagation-transient-analytic.txt  task-propagation-transient-numeric.txt  task-radiation_pattern-transient-analytic.txt  task-radiation_pattern-transient-numeric.txt
project/sim_rectangular_flat_source-single/: task-acoustic_field-transient-analytic.txt  task-acoustic_field-transient-numeric.txt  task-impulse_response-analytic.txt  task-impulse_response-numeric.txt  task-propagation-transient-analytic.txt  task-propagation-transient-numeric.txt  task-radiation_pattern-transient-analytic.txt  task-radiation_pattern-transient-numeric.txt
python/: coarray.py  compress_h5_gzip9.py  convert_propagation_images.py  filter_spikes.py  gen_apod-1d-blackman.py  gen_apod-1d-rectangular.py  gen_colormap_table.py  gen_image-cyl-freq_domain-discret.py  gen_image-cyl-freq_domain.py  gen_image-sta-freq_domain.py  gen_image-synthetic_aperture.py  gen_reflectors-simple.py  network_sync_trigger.py  network_sync_trigger_abort.py  plot_ascan.py  plot_ascan2.py  plot_example_ascan.py  plot_far_field_cw_beam_pattern.py  plot_radiation_pattern.py  plot_sref_and_correlation.py  show_image.py  sim-acoustic_beam-rectangular_source-transient.py  sim-acoustic_field-array_of_rectangular_sources-transient.py  sim-acoustic_field-rectangular_source-transient.py  sim-impulse_response-array_of_rectangular_sources.py  sim-impulse_response-rectangular_source.py  test_cross-correlation_using_dft.py  test_envelope.py
sh/: make_dirs.sh
src/: Controller.cpp  Controller.h  Figure2DWidget.cpp  Figure2DWidget.h  Figure2DWindow.cpp  Figure2DWindow.h  Figure3DWindow.cpp  Figure3DWindow.h  FigureWindowList.h  LogSyntaxHighlighter.cpp  Method.cpp  Method.h  MultiLayer3DWindow.cpp  MultiLayer3DWindow.h  OGLFigureWidget.cpp  OGLFigureWidget.h  OGLMultiLayerWidget.cpp  OGLMultiLayerWidget.h  ProcessingNode.cpp  ProcessingNode.h  ProcessingThread.cpp  ProcessingThread.h  Project.cpp  Project.h  USLab4a.cpp  USLab4a.h  VTKFileMultiImageMethod.h  cli_Project.cpp  cli_USLab4a.h  cli_main.cpp  config.h  global.h  main.cpp
test/: ascan.h5  base48_tx15_rx15-calib_plane_40mm_avg1.h5  bessel_i0.h5  bessel_i0_x.h5  central_diff_x.h5  central_diff_y.h5  decimated_10x.h5  decimated_2x.h5  decimated_5x.h5  decimation_source.h5  fft_x_2048.h5  fft_x_3571.h5  fft_x_4000.h5  fft_yi_2048.h5  fft_yi_3571.h5  fft_yi_4000.h5  fft_yr_2048.h5  fft_yr_3571.h5  fft_yr_4000.h5  filter_b.h5  filter_x.h5  filter_y.h5  filter_y2.h5  gen_bessel_data.py  gen_central_diff_data.py  gen_decimation_data.py  gen_fft_data.py  gen_filter.py  gen_hilbert_data.py  gen_interpolation_data.py  gen_kaiser_data.py  hilbert_x.h5  hilbert_ya.h5  hilbert_yi.h5  hilbert_yr.h5  interp_2x.h5  interp_64x.h5  interp_8x.h5  interp_source.h5  interp_x.h5  (+11 more)
ui/: Figure2DWindow.ui  Figure3DWindow.ui  MultiLayer3DWindow.ui  USLab4a.ui
(+623 files in other folders)
